# sdeul

./: .clinerules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  run_api.py  setup.py
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-bot.yml  claude-code-review.yml  claude.yml  docker-publish.yml  github-merged-branch-deletion.yml  pr-agent.yml  publish-to-pypi.yml  pypi-release.yml  python-package-release-on-pypi-and-github.yml  test.yml
.serena/: project.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sdeul/: __init__.py  api.py  cli.py  config.py  constants.py  extraction.py  llm.py  model.py  utility.py  validation.py  validator.py
test/: test_cli.bats
test/bats/: test_bedrock.bats  test_cli.bats  test_gguf.bats  test_google.bats  test_groq.bats  test_llamacpp.bats  test_llamacpp_gemma2.bats  test_llamacpp_llama3.bats  test_ollama.bats  test_openai.bats
test/cli/: test_anthropic.bats  test_api.bats  test_bedrock.bats  test_cerebras.bats  test_cli.bats  test_google.bats  test_groq.bats  test_llamacpp.bats  test_ollama.bats  test_openai.bats
test/data/: medication_history.schema.json
test/pytest/: conftest.py  test___init__.py  test_cli.py  test_extraction.py  test_llm.py  test_utility.py  test_validation.py
test/unit/: conftest.py  test_api.py  test_cli.py  test_config.py  test_extraction.py  test_llm.py
