[tool.poetry]
name = "sdeul"
version = "v0.1.3"
description = "Structural Data Extractor using LLMs"
license = "AGPL-3.0-or-later"
authors = ["Daichi Narushima <dnarsil+github@gmail.com>"]
maintainers = ["Daichi Narushima <dnarsil+github@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/dceoy/sdeul"
repository = "https://github.com/dceoy/sdeul.git"
documentation = "https://github.com/dceoy/sdeul/blob/main/README.md"
keywords = ["llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development"
]
packages = [
  {include = "sdeul", from = "."}
]
include = []
exclude = []

[tool.poetry.dependencies]
python = "^3.11"
docopt = "^0.6.2"
jsonschema = "^4.23.0"
langchain = "^0.2.15"
langchain-community = "^0.2.15"
langchain-google-genai = "^1.0.10"
langchain-openai = "^0.1.23"
langchain-groq = "^0.1.9"
langchain-aws = "^0.1.17"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
bandit = "^1.7.9"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-isort = "^6.1.1"
pep8-naming = "^0.14.1"
ruff = "^0.6.4"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8-pyproject = "^1.2.3"
pyright = "^1.1.379"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
sdeul = "sdeul.cli:main"

[tool.flake8]
max-line-length = 88
exclude = ["build"]

[tool.ruff]
line-length = 88
exclude = ["build"]

[tool.isort]
line_length = 88
profile = "black"
skip = ["build"]

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true
strict = true
strict_optional = true
strict_equality = true
strict_concatenate = true
exclude = ["build"]

[tool.pyright]
exclude = ["build"]

[tool.bandit]
recursive = true
exclude_dirs = ["build"]

[tool.pytest.ini_options]
addopts = [
  "--cov=sdeul",
  "--cov-report=xml",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--junitxml=junit/test-results.xml",
  "--doctest-modules",
  "--capture=no"
]
testpaths = ["test/pytest"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "6.0"

[tool.coverage.run]
source = ["sdeul"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
